# APKdevastate-cli

./: .gitignore  CMakeLists.txt  README.md  build.sh
include/: analyzer.hpp  apk_extractor.hpp  cert_checker.hpp  dynamic_loaders.hpp  hasher.hpp  native_libs.hpp  permissions.hpp  process_runner.hpp  rat_scanner.hpp  terminal.hpp  trusted_orgs.hpp
resources/: certifications.json
src/: analyzer.cpp  apk_extractor.cpp  cert_checker.cpp  dynamic_loaders.cpp  hasher.cpp  main.cpp  native_libs.cpp  permissions.cpp  process_runner.cpp  rat_scanner.cpp  terminal.cpp  trusted_orgs.cpp
